fix(console): details page header text should not overflow its container

--- a/packages/console/src/components/DetailsPage/DetailsPageHeader/index.module.scss
+++ b/packages/console/src/components/DetailsPage/DetailsPageHeader/index.module.scss
@@ -30,10 +30,12 @@
 
   .metadata {
     flex: 1;
+    overflow: hidden;
 
     .name {
       font: var(--font-title-1);
       color: var(--color-text);
+      @include _.text-ellipsis;
     }
 
     .row {
